# Detection_fraude

./: .gitignore  Dockerfile  README.md  REDME.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: deploy.yml
data/clean/: trades_btc_20260502_182633.parquet  trades_btc_20260502_182724.parquet  trades_btc_20260502_182816.parquet  trades_btc_20260502_182908.parquet  trades_btc_20260502_183000.parquet  trades_btc_20260502_193216.parquet  trades_btc_20260502_193227.parquet  trades_btc_20260502_193237.parquet  trades_btc_20260502_193248.parquet  trades_btc_20260502_193258.parquet  trades_btc_20260502_194136.parquet  trades_btc_20260502_194228.parquet  trades_btc_2026192253.parquet  trades_btc_2026192845.parquet
src/: ingestion_api.py
src/projet_fraude_etl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py  test_transformation.py
