[project]
name = "projet-fraude-etl"
version = "0.1.0"
description = "Moteur ETL Hybride - Détection d'Anomalies Crypto Temps Réel"
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "pyarrow",
    "requests",
    "psycopg2-binary",
    "SQLAlchemy",
    "pytest"
]

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"